--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ img{
     color: black;
 }
 
+/* -----------------------------------------------nav-------------------------------------------------- */
+
 nav{
     display: flex;
     width: 100%;
@@ -457,107 +459,95 @@ section.certifications .container .cert-card{
   transition: transform 0.3s ease;
 }
 
-/* Overlay layer */
 .cert-image .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(128, 128, 128, 0.4); /* semi-transparent gray */
+  background-color: rgba(128, 128, 128, 0.4); 
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
-
-/* Hover effect */
+/*
 .cert-image:hover .overlay {
   opacity: 1;
   cursor: pointer;
 }
 
 
-/* -------------------------------------------modal section---------------------------------------------- */
+/* -------------------------------------------modal---------------------------------------------- */
 
-.img-modal:hover {opacity: 0.7;}
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+.popup {
+  display: none; 
+  position: fixed;
+  z-index: 999;
+  left: 0; top: 0;
+  width: 50%;
+  height: 100vh;
+  background: rgba(0,0,0,0.8);
+
+  display: flex;              
+  justify-content: center;    
+  align-items: center;        
 }
 
-/* Modal Content (image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
+.popup-img {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 8px;
+  box-shadow: 0 2px 20px rgba(0,0,0,0.5);
 }
 
-/* Caption of Modal Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation */
-.modal-content, #caption {  
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
-}
-
-@keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
+.popup .close {
   position: absolute;
-  top: 15px;
+  top: 20px;
   right: 35px;
-  color: #f1f1f1;
+  color: white;
   font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-  color: #bbb;
-  text-decoration: none;
   cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
+
+
+/*
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.8);
 }
 
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 80%;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+.close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #ccc;
+}
+*/
 /* -------------------------------------------contact section---------------------------------------------- */
 
 .contact{
@@ -648,10 +638,190 @@ footer{
 footer .container .socials{
     display: flex;
     justify-content: center;
-    align-items: space-between;
-    gap: 5rem;
+    align-items: center;
+    gap: 1rem;
 }
 
 footer .container .socials a{
     color: var(--white);
+}
+
+/*---------------------------------------------media queries---------------------------------------------- */
+@media (max-width: 768px) {
+
+    nav{
+        box-shadow: 0 0.2rem 0.5rem var(--gray);
+    }
+
+    nav h3{
+        margin-left: 0;
+    }
+
+    nav.container{
+        width: 100%;
+    }
+
+    nav ul{
+        position: fixed;
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        z-index: 3;
+        width: 16rem;
+        height: 100vh;
+        background-color: #fff;
+        box-shadow: 1rem 0 2rem rgba(0, 0, 0, 0.2);
+        display: none;
+    }
+
+    nav ul li{
+        height: 4.6rem;
+        width: 100%;
+    }
+
+    nav .container ul li a{
+        width: 100%;
+        justify-content: start;
+        padding-left: 2rem;
+    }
+
+    nav button{
+        display: inline-block;
+        cursor: pointer;
+        background: transparent;
+        color: black;
+        margin-right: 1rem;
+    }
+
+
+    #menu-btn, #close-btn{
+        display: flex;
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        background-color: white;
+        color: black;
+        z-index: 1000;
+    }
+
+    #menu-btn:hover, #close-btn:hover{
+        background-color: var(--orange);
+        color: white;
+        cursor: pointer;
+    }
+
+    nav button #close-btn{
+        display: none;
+    }
+
+    /*landing*/
+
+    section.landing{
+        margin-top: -4rem;
+        padding-bottom: 2rem;
+        max-width: 100vw;
+        overflow-x: hidden;
+        display: flex;
+        flex-direction: column-reverse;
+    }   
+
+    section.landing .container{
+        grid-template-columns: 1fr;
+        grid-template-rows: 20% 50%;
+        text-align: center;
+        row-gap: 1rem;
+    }
+
+    section.landing .container .socials{
+        display: none;
+    }
+
+    section.landing .info{
+        width: 97%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    section.landing .info h1{
+        text-align: center;
+    }
+
+    section.landing .info #landing-text{
+        text-align: center;
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    section.landing .info h3{
+        text-align: center;
+        margin-left: 0;
+        padding: 0 1rem;
+
+    }
+
+    section.landing .info p{
+        margin: 0 auto;
+        width: 92%;
+        text-align: center;
+    }
+
+    section.landing .profile{
+        grid-row: 1;
+    }
+
+    /*about section*/
+
+    section.about .container{
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+    section.about .container .image{
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    section.about .info{
+        margin-top: 0;
+        padding-top: 0;
+    }
+
+    /*skills section*/
+
+    section.skills .skills-container{
+        grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    }
+
+    /*projects section*/
+
+    section.projects .container {
+    padding: 0;
+    }
+
+    .card {
+    width: 25rem;
+    height: 14rem;
+    margin: 1rem;
+    }
+
+    .project-card{
+    height: 14rem;
+    width: 25rem;
+    }
+
+
+    /*certifications section*/
+
+    section.certifications .container{
+        grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    }
+
+    #white-div{
+        width: 90%;
+        padding: 1rem 2rem;
+    }
+
+    #contact-info{
+        width: 100%
+    }
 }
