--- a/style.css
+++ b/style.css
@@ -581,14 +581,13 @@ section.certifications .container .cert-card{
 #contact-info{
     width: 50%;
     padding: 2rem;
-    background-color: whitesmoke;
+    background-color: var(--peach);
     width: 90%;
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
-    border-radius: 10px;
-    border: solid 1px var(--peach);
+    border-radius: 5px;
 }
 
 .contact-info form{
