--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ section.certifications .container .cert-card{
 #contact-info{
     width: 50%;
     padding: 2rem;
-    background-color: var(--peach);
+    background-color: var(--gray);
     width: 90%;
     display: grid;
     justify-content: center;
