--- a/style.css
+++ b/style.css
@@ -581,13 +581,14 @@ section.certifications .container .cert-card{
 #contact-info{
     width: 50%;
     padding: 2rem;
-    background-color: var(--gray);
+    background-color: whitesmoke;
     width: 90%;
     display: grid;
     justify-content: center;
     align-items: center;
     text-align: center;
     border-radius: 5px;
+    border: solid 1px var(--gray);
 }
 
 .contact-info form{
