--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --red: #f94346;
     --orange: #f98e42;
     --peach: #f98348;
-    --yelloworange: #f9a94e;
+    --yelloworange: #cb6f31;
     --yellow: #f9c54e;
     --white: #fff;
     --black: #000;
