--- a/style.css
+++ b/style.css
@@ -739,6 +739,7 @@ footer .container .socials a{
         width: 97%;
         margin: 0 auto;
         text-align: center;
+        margin-right: auto;
     }
 
     section.landing .info h1{
