--- a/style.css
+++ b/style.css
@@ -476,78 +476,6 @@ section.certifications .container .cert-card{
 }
 
 
-/* -------------------------------------------modal---------------------------------------------- */
-
-
-.popup {
-  display: none; 
-  position: fixed;
-  z-index: 999;
-  left: 0; top: 0;
-  width: 50%;
-  height: 100vh;
-  background: rgba(0,0,0,0.8);
-
-  display: flex;              
-  justify-content: center;    
-  align-items: center;        
-}
-
-.popup-img {
-  max-width: 80%;
-  max-height: 80%;
-  border-radius: 8px;
-  box-shadow: 0 2px 20px rgba(0,0,0,0.5);
-}
-
-.popup .close {
-  position: absolute;
-  top: 20px;
-  right: 35px;
-  color: white;
-  font-size: 40px;
-  cursor: pointer;
-}
-
-
-
-/*
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 999;
-  padding-top: 60px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.8);
-}
-
-.modal-content {
-  margin: auto;
-  display: block;
-  max-width: 90%;
-  max-height: 80%;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
-}
-
-.close {
-  position: absolute;
-  top: 30px;
-  right: 40px;
-  color: #fff;
-  font-size: 40px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close:hover {
-  color: #ccc;
-}
-*/
 /* -------------------------------------------contact section---------------------------------------------- */
 
 .contact{
@@ -743,7 +671,8 @@ footer .container .socials a{
 
     section.landing .info h1{
         text-align: center;
-        margin-right: 0;
+        margin: 0 auto 2rem auto;
+        width: fit-content;
     }
 
     section.landing .info #landing-text{
