--- a/style.css
+++ b/style.css
@@ -664,15 +664,14 @@ footer .container .socials a{
     }
 
     section.landing .info{
-        width: 97%;
-        margin: 0 auto;
         text-align: center;
+        margin: 0 auto 2rem auto;
+        width: fit-content;
     }
 
     section.landing .info h1{
         text-align: center;
-        margin: 0 auto 2rem auto;
-        width: fit-content;
+        margin: 0;
     }
 
     section.landing .info #landing-text{
