--- a/style.css
+++ b/style.css
@@ -665,7 +665,7 @@ footer .container .socials a{
 
     section.landing .info{
         text-align: center;
-        margin: 0 auto 2rem auto;
+        margin: 0 auto;
         width: fit-content;
         border: 1px dashed red;
     }
@@ -696,7 +696,7 @@ footer .container .socials a{
     }
 
     .cv{
-        font-size: 1.3vw;
+        font-size: 2.3vw;
     }
 
     section.landing .profile{
