--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ footer .container .socials a{
         text-align: center;
         margin: 0 auto;
         width: fit-content;
-        border: 1px dashed red;
+        border: 1px dashed green;
     }
 
     section.landing .info h1{
