--- a/style.css
+++ b/style.css
@@ -669,7 +669,7 @@ footer .container .socials a{
         text-align: center;
         margin: 0 auto;
         width: fit-content;
-        border: 1px dashed green;
+        border: 1px solid black;
     }
 
     section.landing .info h1{
@@ -698,7 +698,7 @@ footer .container .socials a{
     }
 
     .cv{
-        font-size: 2.3vw;
+        font-size: 2.6vw;
     }
 
     section.landing .profile{
