--- a/style.css
+++ b/style.css
@@ -646,6 +646,7 @@ footer .container .socials a{
     section.landing{
         margin-top: -4rem;
         padding-bottom: 2rem;
+        padding-left: 0;
         max-width: 100vw;
         overflow-x: hidden;
         display: flex;
@@ -669,8 +670,7 @@ border: solid 1px;
 
     section.landing .info{
         text-align: center;
-        margin: 0 auto;
-        margin-right: 0;
+        margin: 0;
         width: fit-content;
 border: solid 1px red;
     }
