--- a/style.css
+++ b/style.css
@@ -646,7 +646,7 @@ footer .container .socials a{
     section.landing{
         margin-top: -4rem;
         padding-bottom: 2rem;
-        padding-left: 0;
+        padding-left: auto;
         max-width: 100vw;
         overflow-x: hidden;
         display: flex;
