--- a/style.css
+++ b/style.css
@@ -719,6 +719,7 @@ footer .container .socials a{
     section.about .info{
         margin-top: 0;
         padding-top: 0;
+        text-align: center;
     }
 
     /*skills section*/
