--- a/style.css
+++ b/style.css
@@ -729,7 +729,7 @@ footer .container .socials a{
     }
 
 .skills-icons{
-        height: 1.2vh;
+       width: 1.2vw;
   }
 
     /*projects section*/
