--- a/style.css
+++ b/style.css
@@ -700,6 +700,10 @@ footer .container .socials a{
         font-size: 2.6vw;
     }
 
+    #cv-area{
+        padding: 1rem;
+    }
+
     section.landing .profile{
         grid-row: 1;
     }
