--- a/style.css
+++ b/style.css
@@ -695,15 +695,16 @@ footer .container .socials a{
         margin: 0 auto;
         width: 92%;
         text-align: center;
-border: solid 1px;
     }
 
     .cv{
         font-size: 2.6vw;
+        padding: 1rem;
     }
 
     #cv-area{
-        padding: 1rem;
+        padding: 0;
+        margin-top: 0;
     }
 
     section.landing .profile{
