--- a/style.css
+++ b/style.css
@@ -598,7 +598,7 @@ footer .container .socials a{
         height: 100vh;
         background-color: #fff;
         box-shadow: 1rem 0 2rem rgba(0, 0, 0, 0.2);
-        display: none;
+        display: none !important;
     }
 
     nav ul.show {
