--- a/style.css
+++ b/style.css
@@ -288,8 +288,8 @@ section.about .image img{
 }
 
 section.about p{
-    margin-top: 1rem;
-    padding: 1rem;
+    margin:0;
+    padding: 1rem 0;
 }
 
 .cv{
